Переработка архитектуры UserService и добавление в UserStorage метода для валидации юзера в FilmService и FriendshipService